--- a/src/sass/base/_utilities.scss
+++ b/src/sass/base/_utilities.scss
@@ -1,6 +1,11 @@
 .flex {
   display: flex;
   gap: $gap;
+
+  &.even-columns > * {
+    width: 100%;
+    outline: 1px solid limegreen;
+  }
 }
 
 .grid {
@@ -35,6 +40,46 @@ hijos, menos al primeroc, otro modo de llegar a lo mismo es con
   padding-inline: 2rem;
 }
 
+.grid-container {
+  display: grid;
+  text-align: center;
+  place-items: center;
+  height: 100vh;
+
+  border: 2px solid green;
+
+  & * {
+    max-width: 50ch;
+  }
+}
+
+@media (min-width: 45rem) {
+  .grid-container {
+    /*
+  la funcion minmax() obtiene un numero entre el numero minimo y maximo dado,
+  la funcion se puede usar dentro de grid-template-columns,grid-template-rows,
+  grid-auto-columns, grid-auto-rows
+  1fr significa que tome el espacio disponible para su uso
+  */
+    text-align: left;
+    grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 30rem)) minmax(
+        2rem,
+        1fr
+      );
+    column-gap: $gap-2;
+
+    & > *:first-child {
+      grid-column: 2;
+      border: 1px solid white;
+    }
+
+    & > *:last-child {
+      grid-column: 3;
+      border: 1px solid white;
+    }
+  }
+}
+
 .sr-only {
   border: 0;
   clip: rect(0, 0, 0, 0);
@@ -65,6 +110,10 @@ hijos, menos al primeroc, otro modo de llegar a lo mismo es con
     color: #{'hsl(var(--clr-white), 1 )'};
     border-color: #{'hsl(var(--clr-white), 1 )'};
   }
+}
+
+.d-block {
+  display: block;
 }
 
 .p-1 {
