--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -1,8 +1,11 @@
 .primary-navigation {
-  gap: 8rem;
   list-style: none;
   padding: 0;
+  gap: clamp(1.5rem, 5vw, 3.5rem);
   margin: 0;
+  background: #{'hsl( var(--clr-dark) , 0.9)'};
+  // backdrop-filter: blur(1.5rem);
+  //border: 1px solid yellow;
 
   & a {
     text-decoration: none;
@@ -11,5 +14,108 @@
   & a > span {
     font-weight: 700;
     margin-right: 0.5em;
+  }
+}
+
+.mobile-nav-toggle {
+  display: none;
+}
+
+@media (min-width: 35em) {
+  .primary-navigation {
+    padding-inline: clamp(3rem, 10vw, 7rem);
+  }
+}
+
+@supports (backdrop-filter: blur(1.5rem)) {
+  .primary-navigation {
+    background: #{'hsl( var(--clr-white) , 0.05)'};
+    backdrop-filter: blur(1.5rem);
+  }
+}
+
+@media (min-width: 45em) and (max-width: 54.99em) {
+  .primary-navigation {
+    & a > span {
+      display: none;
+    }
+  }
+}
+
+@media (min-width: 55em) {
+  .header::after {
+    content: '';
+    display: block;
+    position: relative;
+    height: 1px;
+    width: 100%;
+    background: red;
+    order: 1;
+    margin-right: -2.5rem;
+    background: #{'hsl(var(--clr-white), 0.25 )'};
+  }
+
+  nav {
+    order: 2;
+  }
+
+  .primary-navigation {
+    margin-block: 2rem;
+  }
+}
+
+@media (max-width: 45rem) {
+  .primary-navigation {
+    grid-row-gap: 0rem;
+    position: fixed;
+    z-index: 1000;
+    inset: 0 0 0 30%;
+
+    list-style: none;
+    padding: calc(min(20rem, 15vh)) 2rem;
+    margin: 0;
+    flex-direction: column;
+
+    transition: transform 500ms ease-in-out;
+
+    &.underline-indicators > .active {
+      border: 0;
+    }
+
+    &.underline-indicators > * {
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+    }
+
+    &__expanded {
+      transform: translateX(0);
+    }
+
+    &__hidden {
+      transform: translateX(100%);
+    }
+  }
+
+  .mobile-nav-toggle {
+    display: block;
+    position: absolute;
+    z-index: 2000;
+    right: 1rem;
+    top: 2rem;
+    background: transparent;
+    border: 0;
+    background-image: url('../../assets/shared/icon-hamburger.svg');
+    width: 1.5rem;
+    aspect-ratio: 1;
+    background-repeat: no-repeat;
+
+    &__close {
+      background-image: url('../../assets/shared/icon-close.svg');
+    }
+
+    &:focus-visible {
+      outline: 1px solid gray;
+      outline-offset: 5px;
+    }
   }
 }
