--- a/src/sass/base/_utilities.scss
+++ b/src/sass/base/_utilities.scss
@@ -21,6 +21,14 @@
   transform: translateX(100%);
 }
 
+.opacity-100 {
+  opacity: 1;
+}
+
+.opacity-0 {
+  opacity: 0;
+}
+
 .gap-2 {
   gap: $gap-2;
 }
