--- a/src/sass/components/_dot-indicators.scss
+++ b/src/sass/components/_dot-indicators.scss
@@ -1,10 +1,13 @@
 .dot-indicators {
+  margin-bottom: 1.5rem;
   & > * {
     cursor: pointer;
     border: 0;
     border-radius: 50%;
-    aspect-ratio: 1; /*circulos sin agregar altura  ancho*/
-    padding: 0.5em;
+    aspect-ratio: 1;
+    padding: 0.4em;
+    margin-right: 0.5rem;
+
     background-color: #{'hsl(var(--clr-white), 0.25 )'};
   }
 
