--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -4,11 +4,12 @@
   gap: clamp(1.5rem, 5vw, 3.5rem);
   margin: 0;
   background: #{'hsl( var(--clr-dark) , 0.9)'};
-  // backdrop-filter: blur(1.5rem);
-  //border: 1px solid yellow;
 
   & a {
     text-decoration: none;
+    display: inline-block;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
   }
 
   & a > span {
@@ -51,6 +52,7 @@
     width: 100%;
 
     order: 1;
+    margin-left: 1.3rem;
     margin-right: -2.5rem;
     background: #{'hsl(var(--clr-white), 0.25 )'};
   }
@@ -77,6 +79,11 @@
     flex-direction: column;
 
     transition: transform 500ms ease-in-out;
+
+    & a {
+      padding-top: 0.5rem;
+      padding-bottom: 0.5rem;
+    }
 
     &.underline-indicators > .active {
       border: 0;
