--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -13,7 +13,9 @@
 @import './components/header';
 
 @import './layout/layout';
+@import './layout/technology';
 
 @import './pages/home.scss';
 @import './pages/destination.scss';
 @import './pages/crew.scss';
+@import './pages/technology.scss';
