--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -3,7 +3,7 @@
   padding: 0;
   gap: clamp(1.5rem, 5vw, 3.5rem);
   margin: 0;
-  background: #{'hsl( var(--clr-dark) , 0.9)'};
+  background: #{'hsl( var(--clr-light) , 0.1)'};
 
   & a {
     text-decoration: none;
@@ -30,8 +30,8 @@
 
 @supports (backdrop-filter: blur(1.5rem)) {
   .primary-navigation {
-    background: #{'hsl( var(--clr-white) , 0.05)'};
-    backdrop-filter: blur(1.5rem);
+    background: #{'hsl( var(--clr-white) , 0.07)'};
+    backdrop-filter: blur(1.4rem);
   }
 }
 
